Add UpdateInfo